main.css
@import url("https://fonts.googleapis.com/css?family=Exo:400,700");
@import "./styles/background.css";
@import "./styles/classes.css";
@import "./sliders/defaultSl.css";
@import "./sliders/paginationSl.css";
@import "./sliders/dynamicPaginationSl.css";

:root {
  --secondary-color: #f0f0f0;
  --primary-bg-color: #e39a0a;
  --bg-squares-color: rgba(255, 255, 255, 0.2);
  --primary-slider-color: rgba(255, 255, 255, 0.404);
  --secondary-slider-color: rgba(255, 255, 255, 0.204);
  --swiper-pagination-color: var(--secondary-color);
}

body {
  font-family: "Exo", sans-serif;
  color: var(--secondary-color);
  overflow: hidden;
  margin: 0%;
  padding: 0%;
}

#main-slider {
  height: 100vh;
}

.slider-container {
  max-width: 70vw;
}

#introduction {
  padding: 50px;
  text-align: center;
}

#introduction h1 {
  font-size: 50px;
  margin-bottom: 10px;
}

.swiper-button-next,
.swiper-button-prev {
  background-color: #fff;
  padding: 5px;
  border-radius: 50%;
  width: 40px;
  height: 40px;
}

.swiper-button-next {
  right: 25px !important;
}

.swiper-button-prev {
  left: 25px !important;
}

.swiper-button-next,
.swiper-button-prev {
  color: #e39a0a;
}

.button-prev {
  fill: var(--primary-bg-color);
}

.swiper-button-next svg {
  width: 10px;
}

.swiper-button-prev svg {
  width: 10px;
}

.description {
  margin-top: 55px;
  text-align: center;
}

.description h2 {
  margin: 0%;
}

.description p {
  margin: 0;
  margin-top: 10px;
}

@media (max-width: 1200px) {
  .swiper-button-next,
  .swiper-button-prev {
    top: unset !important;
    bottom: 25px !important;
  }
  .slider-container {
    max-width: 70vw;
    margin-bottom: 30px
  }
}

@media (max-width: 900px) {
  #introduction h1 {
    font-size: 40px;
  }
  .description {
    margin-top: 30px;
  }
}

@media (max-width: 460px) {
  #introduction h1 {
    font-size: 30px;
  }
  #introduction p {
    font-size: 14px;
  }
}
@media (max-width: 360px) {
  #introduction h1 {
    font-size: 25px;
  }
  #introduction p {
    font-size: 12px;
  }
}

